--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -103,6 +103,46 @@
     }
     .menu-toggle {
       display: inline-block;
+      z-index: 1001;
+      &:active, &:focus, &:hover {
+        color: $white;
+      }
+    }
+  }
+  .main-navigation {
+    position: fixed;
+    display: block;
+    left: 0;
+    top: 0;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    background-color: $dark-blue;
+    z-index: 100;
+    text-align: center;
+    .main-navigation-container {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .bank-live-link {
+      display: inline-flex;
+    }
+    .inner-wrap {
+      display: block;
+    }
+    .bank-live-link {
+      margin: 0 0 20px 0;
+    }
+    .main-nav {
+      display: block;
+      margin: 0 0 30px 0;
+      font-size: 20px;
+      li {
+        display: block;
+        margin: 10px 0;
+      }
     }
   }
   .main-title {
