--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -422,49 +422,6 @@
       }
     }
   }
-  .whitelist-modal {
-    .logo {
-      margin-bottom: 15px;
-      img {
-        max-width: 95px;
-      }
-    }
-    .close {
-      font-size: 28px;
-    }
-    .modal-dialog {
-      max-width: 100%;
-      margin: 15px;
-    }
-    .modal-title {
-      font-size: 20px;
-    }
-    .modal-body {
-      padding: 0 15px;
-    }
-    .token-block {
-      margin-bottom: 15px;
-      .token-button {
-        font-size: 24px;
-        padding: 6px;
-      }
-    }
-    .whitelist-form {
-      padding-top: 0;
-    }
-    .form-group {
-      margin-bottom: 15px;
-    }
-    .form-inner-wrap {
-      flex-wrap: wrap;
-      .btn {
-        margin: 0 auto 20px;
-      }
-    }
-    .form-check {
-      width: 100%;
-    }
-  }
 }
 
 @media (max-width: 576px) {
@@ -823,6 +780,63 @@
   }
   .subscribe-section {
     display: none;
+  }
+  .whitelist-modal {
+    .logo {
+      margin-bottom: 15px;
+      img {
+        max-width: 95px;
+      }
+    }
+    .close {
+      font-size: 28px;
+    }
+    .modal-dialog {
+      max-width: 100%;
+      margin: 15px auto;
+    }
+    .modal-title {
+      font-size: 20px;
+    }
+    .modal-body {
+      padding: 0 15px;
+    }
+    .token-block {
+      margin-bottom: 15px;
+      .token-button {
+        font-size: 24px;
+        padding: 6px;
+      }
+    }
+    .whitelist-form {
+      padding-top: 0;
+    }
+    .form-group {
+      margin-bottom: 15px;
+    }
+    .form-inner-wrap {
+      flex-wrap: wrap;
+      .btn {
+        margin: 0 auto 20px;
+      }
+    }
+    .form-check {
+      width: 100%;
+    }
+  }
+  .theme-modal {
+    .modal-dialog {
+      margin: 15px auto;
+      padding: 0 15px;
+    }
+  }
+  .whitelist-send {
+    .modal-body {
+      padding: 15px;
+    }
+    .inner-title {
+      min-height: 38px;
+    }
   }
 }
 
