--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -89,6 +89,11 @@
       }
     }
   }
+  .events-section {
+    .event-name {
+      font-size: 18px;
+    }
+  }
 }
 
 @media (max-width: 992px) {
@@ -777,9 +782,6 @@
         padding: 15px;
       }
     }
-  }
-  .subscribe-section {
-    display: none;
   }
   .whitelist-modal {
     .logo {
