--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -898,7 +898,7 @@
 
 //subscribe section
 
-.subscribe-section {
+/*.subscribe-section {
   padding: 88px 0;
   background: url("../images/subscribe-bg.png") right/auto 100% no-repeat;
   .subscribe-title {
@@ -906,6 +906,32 @@
   }
   .subscribe-body {
     padding-left: 95px;
+  }
+}*/
+.subscribe-section {
+  .subscribe-block {
+    background-color: $aqua;
+    text-align: center;
+    width: 920px;
+    max-width: 90%;
+    color: $dark-blue;
+    padding: 58px 45px;
+    margin: 0 auto;
+    box-shadow: inset 0 -15px 41px 0 rgba(7, 22, 47, 0.5);
+  }
+  .subscribe-title {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 1.28;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+  }
+  .subscribe-descr {
+    font-family: $lora;
+    font-size: 30px;
+    font-style: italic;
+    line-height: 1.33;
+    margin-bottom: 40px;
   }
 }
 
