--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -179,6 +179,7 @@ ul {
 .quotation {
   @include abs-elems;
   max-width: 50%;
+  margin: 0 0 0 auto;
   color: $white;
   padding: 66px 0 0 95px;
   .text {
