--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -263,7 +263,7 @@
   .section-img {
     display: block;
     width: 56%;
-    margin: 0 20px 0 auto;
+    margin: 0 auto 0 20px;
   }
   .section-img-mobile {
     text-align: center;
