--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -229,7 +229,8 @@
     margin: 36px 60px;
     align-items: center;
     li {
-      width: calc(100% / 5);
+      width: 20%;
+      margin: 25px 40px;
       text-indent: 0;
       background: none;
       border: none;
