--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -735,6 +735,8 @@
     }
     .team-member {
       font-size: 12px;
+      max-width: 350px;
+      margin: 15px auto;
       .overlay {
         padding: 25px;
       }
