--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -664,6 +664,7 @@
     .ts-item-table {
       td, th {
         padding: 10px 0;
+        vertical-align: top;
       }
       td {
         width: 50%;
