--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -707,7 +707,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 175px;
+    //height: 175px;
 
     img {
       max-height: 150px;
