--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -673,12 +673,16 @@
     }
   }
   .partners-section {
+    .row {
+      flex-wrap: wrap;
+    }
     .partner-item {
+      flex-basis: auto;
       height: auto;
       border: none !important;
-      margin: 20px 0;
+      margin: 30px 0;
       img {
-        max-width: 110px;
+        max-width: 150px;
       }
       &.crop-corners {
         &:after, &:before {
