--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -75,9 +75,11 @@
 //home
 
 .section-home {
-  margin-bottom: $section-mid-space;
-  background: url("../images/home-bg.png") no-repeat bottom right;
+  margin-bottom: 200px;
   padding-top: 20px;
+  .container {
+    background: url("../images/home-bg.png") no-repeat bottom right;
+  }
   .main-sub-title {
     margin-bottom: 6%;
   }
@@ -98,6 +100,7 @@
 //discover section
 
 .discover-section {
+  padding-top: 70px;
   margin-bottom: $section-sub-bottom;
   .section-title {
     margin-bottom: 50px;
@@ -1091,51 +1094,6 @@
     a {
       color: $white;
       text-decoration: underline;
-    }
-  }
-}
-
-.sendgrid-subscription-widget {
-  #sg_signup_first_name,
-  #sg_signup_last_name,
-  #sg_email {
-    @extend .inp;
-  }
-  #sg-submit-btn {
-    @extend .btn;
-    color: $black !important;
-    background-color: $aqua !important;
-    border: 2px solid aqua !important;
-    transition: all 0.3s;
-    margin: 30px auto !important;
-    display: flex !important;
-    justify-content: center !important;
-    &:hover {
-      background-color: $transp !important;
-      border-color: $aqua !important;
-      color: $aqua !important;
-    }
-  }
-  .sg-consent-text {
-    display: flex;
-    align-items: center;
-  }
-  .sg-consent-text {
-    justify-content: center;
-    margin-bottom: 40px;
-    label {
-      margin-bottom: 0;
-      display: flex;
-      align-items: center;
-    }
-    input[type="checkbox"] {
-      margin-right: 5px;
-    }
-    a {
-      color: #fff !important;
-      text-decoration: underline;
-      font-style: italic;
-      padding-left: 4px;
     }
   }
 }
