--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -285,12 +285,16 @@
     .carousel-control {
       width: 50px;
       height: 50px;
+      @include abs-align-y;
     }
-    .carousel-control-зкум {
+    .carousel-control-prev {
       left: -25px;
     }
     .carousel-control-next {
-      right: -30px;
+      right: -25px;
+    }
+    .review-author {
+      font-size: 14px;
     }
   }
   .events-section {
