--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -77,8 +77,12 @@
 .section-home {
   margin-bottom: 200px;
   padding-top: 20px;
+  position: relative;
   .container {
-    background: url("../images/home-bg.png") no-repeat bottom right;
+    //background: url("../images/home-bg.png") no-repeat bottom right;
+    @include abs-align-x;
+    position: absolute;
+    top: 20px;
   }
   .main-sub-title {
     margin-bottom: 6%;
