--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -73,7 +73,16 @@
 }
 
 //home
-
+/*.main-anim-box {
+  position: relative;
+}
+#homeAnimation2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}*/
 .section-home {
   margin-bottom: 200px;
   padding-top: 20px;
